--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,12 @@
         tools:context=".MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:name="com.example.myapplication.FirstFragment"
-            android:id="@+id/home_screen" tools:layout="@layout/fragment_first"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="com.example.myapplication.FirstFragment"
+            android:id="@+id/home_screen"
+            tools:layout="@layout/fragment_first" />
+
     <ImageButton
             android:src="@android:drawable/sym_def_app_icon"
             android:layout_width="wrap_content"
@@ -20,8 +23,7 @@
             android:layout_gravity="top|end"
             android:background="@null"
             android:layout_margin="16dp"
-            android:contentDescription="@string/avatar_icon"
-    />
+            android:contentDescription="@string/avatar_icon" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -35,7 +37,6 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:menu="@menu/bottom_nav"/>
+                app:menu="@menu/bottom_nav" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
-
