--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -3,7 +3,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/gradients">
 
     <TextView
             android:id="@+id/textview_first"
@@ -11,6 +12,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="76dp"
             android:text="@string/login_text"
+            android:textColor="@color/white"
             android:textSize="50sp"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
@@ -24,6 +26,7 @@
             android:layout_height="48dp"
             android:hint="@string/email_input_text"
             android:autofillHints="emailAddress"
+            android:textColorHint="@color/white"
             android:inputType="textEmailAddress"
             android:background="@drawable/borders"
             android:padding="5dp"
@@ -37,6 +40,7 @@
             android:layout_width="300dp"
             android:layout_height="48dp"
             android:hint="@string/password_input_text"
+            android:textColorHint="@color/white"
             android:autofillHints="password"
             android:inputType="textPassword"
             android:background="@drawable/borders"
@@ -61,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sign_up_link"
-            android:textColor="@color/button_purple"
+            android:textColor="@color/white"
             android:textSize="14sp"
             android:padding="8dp"
             android:layout_marginTop="15dp"
