--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -96,7 +96,7 @@
             android:id="@+id/button_second"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:text="@string/login_button"
+            android:text="@string/login_text"
             app:layout_constraintTop_toBottomOf="@id/reenter_password_input"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +106,7 @@
             android:id="@+id/sign_in_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login_link"
+            android:text="@string/login_text"
             android:textColor="@color/button_purple"
             android:textSize="14sp"
             android:padding="8dp"
@@ -123,7 +123,7 @@
             android:id="@+id/login_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sign_up_link"
+            android:text="@string/sign_up_text"
             android:textColor="@color/button_purple"
             android:textSize="14sp"
             android:padding="8dp"
