--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -27,6 +27,7 @@
             android:hint="@string/email_input_text"
             android:autofillHints="emailAddress"
             android:textColorHint="@color/white"
+            android:textColor="@color/white"
             android:inputType="textEmailAddress"
             android:background="@drawable/borders"
             android:padding="8dp"
@@ -42,6 +43,7 @@
             android:layout_height="48dp"
             android:hint="@string/password_input_text"
             android:textColorHint="@color/white"
+            android:textColor="@color/white"
             android:autofillHints="password"
             android:inputType="textPassword"
             android:background="@drawable/borders"
