--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -3,7 +3,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/gradients">
 
 
     <TextView
@@ -90,48 +91,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="parent"
-            app:layout_constraintRight_toLeftOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.495"/>
-    <Button
-            android:id="@+id/button_second"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:text="@string/login_button"
-            app:layout_constraintTop_toBottomOf="@id/reenter_password_input"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="32dp"/>
-    <TextView
-            android:id="@+id/sign_in_link"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login_link"
-            android:textColor="@color/button_purple"
-            android:textSize="14sp"
-            android:padding="8dp"
-            app:layout_constraintTop_toBottomOf="@id/button_second"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintRight_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias=".5"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="230dp"/>
-
-    <TextView
-            android:id="@+id/login_link"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sign_up_link"
-            android:textColor="@color/button_purple"
-            android:textSize="14sp"
-            android:padding="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintRight_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias=".5"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="230dp"/>
+            app:layout_constraintRight_toLeftOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
