--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -16,6 +16,7 @@
             android:textSize="50sp"
             android:fontFamily="sans-serif-medium"
             android:gravity="center_horizontal"
+            style="@style/login_text"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
@@ -28,6 +29,8 @@
             android:inputType="textEmailAddress"
             android:background="@drawable/borders"
             android:padding="5dp"
+            style="@style/login_text"
+            android:textColorHint="@color/white"
             app:layout_constraintTop_toBottomOf="@id/textview_first"
             app:layout_constraintLeft_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +46,8 @@
             android:inputType="textEmailAddress"
             android:background="@drawable/borders"
             android:padding="5dp"
+            style="@style/login_text"
+            android:textColorHint="@color/white"
             app:layout_constraintTop_toBottomOf="@id/textview_first"
             app:layout_constraintLeft_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +58,7 @@
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@android:color/black"
+            android:background="@android:color/white"
             android:layout_marginTop="35dp"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="30dp"
@@ -72,6 +77,8 @@
             android:inputType="textPassword"
             android:background="@drawable/borders"
             android:padding="5dp"
+            style="@style/login_text"
+            android:textColorHint="@color/white"
             app:layout_constraintTop_toBottomOf="@id/email_input"
             app:layout_constraintLeft_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +94,8 @@
             android:inputType="textPassword"
             android:background="@drawable/borders"
             android:padding="5dp"
+            style="@style/login_text"
+            android:textColorHint="@color/white"
             app:layout_constraintTop_toBottomOf="@id/password_input"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
