--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -6,20 +6,32 @@
         android:layout_height="match_parent"
         android:background="@drawable/gradients">
 
+    <ImageButton
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/back_button"
+            android:layout_margin="16dp"
+            android:tint="@color/white"
+            app:srcCompat="@drawable/back_arrow"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
 
     <TextView
             android:id="@+id/textview_first"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="76dp"
             android:text="@string/sign_up_text"
             android:textSize="50sp"
             android:fontFamily="sans-serif-medium"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             style="@style/login_text"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="60dp"/>
     <EditText
             android:id="@+id/name_input"
             android:layout_width="300dp"
@@ -28,45 +40,30 @@
             android:autofillHints="emailAddress"
             android:inputType="textEmailAddress"
             android:background="@drawable/borders"
-            android:padding="5dp"
+            android:padding="8dp"
+            android:layout_marginTop="30dp"
             style="@style/login_text"
             android:textColorHint="@color/white"
             app:layout_constraintTop_toBottomOf="@id/textview_first"
-            app:layout_constraintLeft_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintRight_toLeftOf="parent"
-            android:layout_marginTop="36dp" app:layout_constraintHorizontal_bias="0.495"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
+
     <EditText
             android:id="@+id/email_input"
             android:layout_width="300dp"
             android:layout_height="48dp"
             android:hint="@string/email_input_text"
             android:autofillHints="emailAddress"
-            android:inputType="textEmailAddress"
-            android:background="@drawable/borders"
-            android:padding="5dp"
-            style="@style/login_text"
             android:textColorHint="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/textview_first"
-            app:layout_constraintLeft_toRightOf="parent"
+            android:textColor="@color/white"
+            android:inputType="textEmailSubject"
+            android:background="@drawable/borders"
+            android:padding="8dp"
+            android:layout_marginTop="20dp"
+            style="@style/login_text"
+            app:layout_constraintTop_toBottomOf="@id/name_input"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintRight_toLeftOf="parent"
-            android:layout_marginTop="108dp" app:layout_constraintHorizontal_bias="0.495"/>
-
-    <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/white"
-            android:layout_marginTop="35dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            app:layout_constraintTop_toBottomOf="@id/email_input"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <EditText
             android:id="@+id/password_input"
@@ -74,32 +71,58 @@
             android:layout_height="48dp"
             android:hint="@string/password_input_text"
             android:autofillHints="emailAddress"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
             android:inputType="textPassword"
             android:background="@drawable/borders"
-            android:padding="5dp"
+            android:padding="8dp"
+            android:layout_marginTop="20dp"
             style="@style/login_text"
-            android:textColorHint="@color/white"
             app:layout_constraintTop_toBottomOf="@id/email_input"
-            app:layout_constraintLeft_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintRight_toLeftOf="parent"
-            android:layout_marginTop="80dp" app:layout_constraintHorizontal_bias="0.504"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
+
     <EditText
             android:id="@+id/reenter_password_input"
             android:layout_width="300dp"
             android:layout_height="48dp"
             android:hint="@string/reenter_password_input_text"
-            android:autofillHints="password"
+            android:autofillHints="emailAddress"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
             android:inputType="textPassword"
             android:background="@drawable/borders"
-            android:padding="5dp"
+            android:padding="8dp"
+            android:layout_marginTop="20dp"
             style="@style/login_text"
-            android:textColorHint="@color/white"
             app:layout_constraintTop_toBottomOf="@id/password_input"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/button_split"
+            app:layout_constraintTop_toBottomOf="@id/reenter_password_input"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toRightOf="parent"
-            app:layout_constraintRight_toLeftOf="parent"/>
+            android:layout_marginTop="30dp">
+
+        <com.google.android.material.button.MaterialButton
+                android:id="@+id/signup_button"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sign_up_text"
+                android:textColor="@color/white"
+                android:backgroundTint="@android:color/transparent"
+                android:layout_margin="0dp"
+                android:shadowColor="#000000"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="2"
+                app:cornerRadius="0dp"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
