--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
+                app:itemIconTint="@drawable/bottom_nav_colors"
                 app:menu="@menu/bottom_nav"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <FrameLayout
