--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="light_text">#2E2E2E</color>
     <color name="accent">#FFD700</color>
 
+    <color name="icon">#1E90FF</color>
 
     <!-- Fitness parts model colors -->
     <!-- We'll get more specific later -->
