--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,16 +4,54 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".SettingsFragment"
-             android:background="@drawable/gradients">
+             android:background="@drawable/gradient_blue">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/settings"
-            android:gravity="center"
-            android:textSize="32sp"
-            android:textColor="@color/white"
-            android:fontFamily="sans-serif-medium"/>
+            android:padding="16dp">
 
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            <!-- Title -->
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings"
+                    android:gravity="center"
+                    android:textSize="30sp"
+                    android:textColor="@color/white"
+                    android:fontFamily="sans-serif-medium"
+                    android:paddingBottom="16dp"/>
+
+            <!-- Settings Section 1 -->
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:padding="8dp">
+
+                <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/private_profile"
+                        android:textSize="24sp"
+                        android:textColor="@color/white"/>
+
+                <Switch
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:id="@+id/switch_notifications"/>
+            </LinearLayout>
+
+            <!-- Settings Section 2 -->
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </FrameLayout>
